# ray-kafka-ml-pipeline

./: README.md  pyproject.toml
src/consumer/: consume.py  models.py  ray_tasks.py
src/producer/: produce.py
terraform/base/: outputs.tf  providers.tf  s3.tf  sg.tf  sqs.tf  variables.tf  vpc.tf
terraform/services/: providers.tf
